2010-05-24  JMB  Chinese & Czech updates, Debian/Maemo description updates

    Added the updated Chinese and Czech UI translations, and the Chinese help
    file translation.  Made another attempt to fix the package description on
    the Maemo package web page.

2010-05-19  JMB  Read-only encrypted files, print pages filter, translations

    Fixed a bug where read-only encrypted files were erroneously showing as
    saveable.  Fixed the print preview dialog so it no longer restricts you to
    the last set of pages chosen for printing.  Updated all the translation
    files with a few new phrases.

2010-05-17  #################### PortaBase 2.0b2 ####################

2010-05-17  JMB  Sorting editor bugfix, updated version number

    Fixed a bug in the sorting editor where ascending/descending labels were
    initially reversed.  Also updated the version number in all appropriate
    places for the next beta release.

2010-05-15  JMB  Assorted bugfixes

    Read-only files can now be opened correctly, with a dialog warning the user
    that they will not be able to save any changes made.  Also added better
    recognition of and error messages for assorted file handling problems
    (trying to open a file that doesn't exist or the user doesn't have read
    access to, trying to overwrite a file that the user doesn't have write
    permission for, etc.)

    Fixed a bug that prevented slideshows from working (introduced by an
    earlier fix for a memory leak).  Exclude "None" dates and times from column
    statistic min/max calculations when there are any other values present.
    Pressing the left or right arrows in the row editor was sometimes causing
    both the intended change in the displayed row and an additional change in
    focus of the buttons at the bottom of the dialog; fixed to have just the
    desired effect.  Set tab stop widths in the note editor to be the same as
    in earlier versions of PortaBase (the width of 8 'x' characters in the